[package]
name = "inexor-rgf-plugin-binary"
description = "Inexor - Reactive Graph Flow - Plugin - Binary"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libinexor-rgf-plugin-binary"
depends = "inexor-rgf, libinexor-rgf-plugin-base, libinexor-rgf-plugin-file, libinexor-rgf-plugin-trigger"
assets = [
    ["target/release/libinexor_rgf_plugin_binary.so", "usr/share/inexor-rgf/default/plugins/installed/libinexor_rgf_plugin_binary.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
http = { workspace = true }
infer = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"]}
matchit = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = [ "threadsafe", "derive" ] }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-graph = { workspace = true }
inexor-rgf-behaviour = { workspace = true }
inexor-rgf-behaviour-api = { workspace = true }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-plugin-api = { workspace = true, features = [ "json5", "toml" ] }
inexor-rgf-model-runtime = { workspace = true }
inexor-rgf-model-binary = { version = "0.10.0", path = "../../crates/model" }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }

[dev-dependencies]
default-test = { workspace = true }
inexor-rgf-graph = { workspace = true, features = ["test"] }
inexor-rgf-test-utils = { workspace = true }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
glob = "0.3"
