[package]
name = "inexor-rgf-model-color"
description = "Inexor - Reactive Graph Flow - Model - Color"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
angular-units = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
prisma = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }

[lib]
crate-type = ["lib"]
