[package]
name = "inexor-rgf-plugin-color"
description = "Inexor - Reactive Graph Flow - Plugin - Color"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libinexor-rgf-plugin-color"
depends = "inexor-rgf, libinexor-rgf-plugin-base"
assets = [
    ["target/release/libinexor_rgf_plugin_color.so", "usr/share/inexor-rgf/default/plugins/installed/libinexor_rgf_plugin_color.so", "755"],
]

[dependencies]
angle = { workspace = true }
angular-units = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"]}
paste = { workspace = true }
prisma = { workspace = true }
query_interface = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde_json = { workspace = true }

inexor-rgf-core-di = { workspace = true, features = ["async"] }
inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-plugins = { workspace = true }
inexor-rgf-core-reactive = { workspace = true }
inexor-rgf-model-color = { version = "0.9.1", path = "../../crates/model" }

[dev-dependencies]
inexor-rgf-core-builder = { workspace = true }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
glob = "0.3"
