[package]
name = "inexor-rgf-plugin-color"
description = "Inexor - Reactive Graph Flow - Plugin - Color"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libinexor-rgf-plugin-color"
depends = "inexor-rgf, libinexor-rgf-plugin-base"
assets = [
    ["target/release/libinexor_rgf_plugin_color.so", "usr/share/inexor-rgf/default/plugins/installed/libinexor_rgf_plugin_color.so", "755"],
]

[dependencies]
angular-units = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
prisma = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-behaviour-model-impl = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-plugin-api = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }
inexor-rgf-reactive-service-api = { workspace = true, features = ["derive"] }
inexor-rgf-type-system-api = { workspace = true }

inexor-rgf-model-color = { version = "0.10.0", path = "../../crates/model" }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
