[package]
name = "reactive-graph-plugin-color"
description = "Reactive Graph - Plugin - Color"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-plugin-color"
depends = "reactive-graph, libreactive-graph-plugin-base"
assets = [
    ["target/release/libreactive_graph_plugin_color.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_plugin_color.so", "755"],
]

[dependencies]
angular-units = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
prisma = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-behaviour-model-impl = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-type-system-api = { workspace = true }

reactive-graph-model-color = { version = "0.10.0", path = "../../crates/model" }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
