[package]
name = "inexor-rgf-model-comparison"
description = "Inexor - Reactive Graph Flow - Model - Comparison"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-reactive = { workspace = true }
inexor-rgf-model-result = { path = "../../../result/crates/model" }

[lib]
crate-type = ["lib"]
