[package]
name = "inexor-rgf-model-comparison"
description = "Inexor - Reactive Graph Flow - Model - Comparison"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }

inexor-rgf-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[lib]
crate-type = ["lib"]
