[package]
name = "reactive-graph-std-comparison-model"
description = "Reactive Graph - Model - Comparison"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }

reactive-graph-std-result-model = { version = "0.10.0", path = "../../../result/crates/model" }

[lib]
crate-type = ["lib"]
