[package]
name = "inexor-rgf-model-config"
description = "Inexor - Reactive Graph Flow - Model - Config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-reactive = { workspace = true }
inexor-rgf-model-file = { version = "0.9.1", path = "../../../file/crates/model" }
inexor-rgf-model-result = { version = "0.9.1", path = "../../../result/crates/model" }
inexor-rgf-model-trigger = { version = "0.9.1", path = "../../../trigger/crates/model" }

[lib]
crate-type = ["lib"]
