[package]
name = "inexor-rgf-model-config"
description = "Inexor - Reactive Graph Flow - Model - Config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-model-runtime = { workspace = true }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
inexor-rgf-model-result = { version = "0.10.0", path = "../../../result/crates/model" }
inexor-rgf-behaviour-api = { workspace = true }

[lib]
crate-type = ["lib"]
