[package]
name = "inexor-rgf-model-config"
description = "Inexor - Reactive Graph Flow - Model - Config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }
inexor-rgf-runtime-model = { workspace = true }

inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
inexor-rgf-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[lib]
crate-type = ["lib"]
