[package]
name = "inexor-rgf-plugin-config"
description = "Inexor - Reactive Graph Flow - Plugin - Config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libinexor-rgf-plugin-config"
depends = "inexor-rgf, libinexor-rgf-plugin-base, libinexor-rgf-plugin-file, libinexor-rgf-plugin-trigger, libinexor-rgf-plugin-result"
assets = [
    ["target/release/libinexor_rgf_plugin_config.so", "usr/share/inexor-rgf/default/plugins/installed/libinexor_rgf_plugin_config.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }


inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-behaviour-model-impl = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-plugin-api = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }
inexor-rgf-reactive-service-api = { workspace = true, features = ["derive"] }
inexor-rgf-runtime-model = { workspace = true }
inexor-rgf-type-system-api = { workspace = true }

inexor-rgf-model-config = { version = "0.10.0", path = "../../crates/model" }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
inexor-rgf-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
