[package]
name = "reactive-graph-plugin-config"
description = "Reactive Graph - Plugin - Config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-plugin-config"
depends = "reactive-graph, libreactive-graph-plugin-base, libreactive-graph-plugin-file, libreactive-graph-plugin-trigger, libreactive-graph-plugin-result"
assets = [
    ["target/release/libreactive_graph_plugin_config.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_plugin_config.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }


reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-behaviour-model-impl = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-reactive-service-api = { workspace = true, features = ["derive"] }
reactive-graph-runtime-model = { workspace = true }
reactive-graph-type-system-api = { workspace = true }

reactive-graph-model-config = { version = "0.10.0", path = "../../crates/model" }
reactive-graph-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
reactive-graph-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
