[package]
name = "inexor-rgf-model-connector"
description = "Inexor - Reactive Graph Flow - Model - Connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-behaviour-model-api = { workspace = true }
inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }

[lib]
crate-type = ["lib"]
