[package]
name = "reactive-graph-model-connector"
description = "Reactive Graph - Model - Connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }

[lib]
crate-type = ["lib"]
