[package]
name = "reactive-graph-std-connector"
description = "Reactive Graph - STD - Connector"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-std-connector"
depends = "reactive-graph, libreactive-graph-std-base"
assets = [
    ["target/release/libreactive_graph_std_connector.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_std_connector.so", "755"],
]

[dependencies]
async-trait = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-behaviour-model-impl = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-type-system-api = { workspace = true }

reactive-graph-std-connector-model = { version = "0.10.0", path = "../../crates/model" }

[dev-dependencies]
reactive-graph-graph = { workspace = true, features = ["test"] }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[lints]
workspace = true

[package.metadata.cargo-post.dependencies]
reactive-graph-utils-deployment = { version = "0.10.0", git = "https://github.com/reactive-graph/reactive-graph.git" }
