[package]
name = "inexor-rgf-model-date-time"
description = "Inexor - Reactive Graph Flow - Model - Date Time"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
data-url = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-model-result = { version = "0.10.0", path = "../../../result/crates/model" }
inexor-rgf-model-runtime = { workspace = true }
inexor-rgf-behaviour-api = { workspace = true }

[lib]
crate-type = ["lib"]
