[package]
name = "reactive-graph-plugin-date-time"
description = "Reactive Graph - Plugin - Date Time"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[package.metadata.deb]
name = "libreactive-graph-plugin-date-time"
depends = "reactive-graph, libreactive-graph-plugin-result, libreactive-graph-plugin-trigger"
assets = [
    ["target/release/libreactive_graph_plugin_date_time.so", "usr/share/reactive-graph/default/plugins/installed/libreactive_graph_plugin_date_time.so", "755"],
]

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"] }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
springtime-di = { workspace = true, default-features = false, features = ["threadsafe", "derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-behaviour-model-impl = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-plugin-api = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-reactive-service-api = { workspace = true, features = ["derive"] }
reactive-graph-runtime-model = { workspace = true }
reactive-graph-type-system-api = { workspace = true }

reactive-graph-model-date-time = { version = "0.10.0", path = "../../crates/model" }
reactive-graph-model-result = { version = "0.10.0", path = "../../../result/crates/model" }

[dev-dependencies]
default-test = { workspace = true }
reactive-graph-graph = { workspace = true, features = ["test"] }
reactive-graph-test-utils = { workspace = true }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
glob = "0.3"
