[package]
name = "inexor-rgf-model-file"
description = "Inexor - Reactive Graph Flow - Model - File"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
lazy_static = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-behaviour-api = { workspace = true }
inexor-rgf-model-runtime = { workspace = true }

[lib]
crate-type = ["lib"]
