[package]
name = "inexor-rgf-model-flow"
description = "Inexor - Reactive Graph Flow - Model - Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indradb-lib = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }

inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-reactive = { workspace = true }
inexor-rgf-model-base = { version = "0.9.1", path = "../../../base/crates/model" }

[lib]
crate-type = ["lib"]
