[package]
name = "inexor-rgf-model-flow"
description = "Inexor - Reactive Graph Flow - Model - Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-reactive-model-api = { workspace = true }
inexor-rgf-reactive-model-impl = { workspace = true }

inexor-rgf-model-base = { version = "0.10.0", path = "../../../base/crates/model" }

[lib]
crate-type = ["lib"]
