[package]
name = "reactive-graph-model-flow"
description = "Reactive Graph - Model - Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum_macros = { workspace = true }

reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }

reactive-graph-model-base = { version = "0.10.0", path = "../../../base/crates/model" }

[lib]
crate-type = ["lib"]
