[package]
name = "inexor-rgf-plugin-flow"
description = "Inexor - Reactive Graph Flow - Plugin - Flow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
log = { workspace = true, features = ["std", "serde"] }
log4rs = { workspace = true, features = ["console_appender", "file_appender", "toml_format"]}
paste = { workspace = true }
query_interface = { workspace = true }
rust-embed = { workspace = true, features = ["debug-embed", "compression"] }
serde_json = { workspace = true }

inexor-rgf-core-di = { workspace = true, features = ["async"] }
inexor-rgf-core-model = { workspace = true }
inexor-rgf-core-plugins = { workspace = true }
inexor-rgf-model-flow = { version = "0.9.1", path = "../../crates/model" }
inexor-rgf-model-base = { version = "0.9.1", path = "../../../base/crates/model" }

[dev-dependencies]
inexor-rgf-core-builder = { workspace = true }

[lib]
# Plugins use crate-type cdylib
# https://doc.rust-lang.org/reference/linkage.html
# https://users.rust-lang.org/t/what-is-the-difference-between-dylib-and-cdylib/28847/3
crate-type = ["cdylib"]

[package.metadata.cargo-post.dependencies]
toml = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
glob = "0.3"
