[package]
name = "inexor-rgf-model-git"
description = "Inexor - Reactive Graph Flow - Model - GIT"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../../../README.md"

[dependencies]
git2 = { workspace = true }
lazy_static = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }

inexor-rgf-graph = { workspace = true }
inexor-rgf-model-runtime = { workspace = true }
inexor-rgf-model-base = { version = "0.10.0", path = "../../../base/crates/model" }
inexor-rgf-model-file = { version = "0.10.0", path = "../../../file/crates/model" }
inexor-rgf-model-http = { version = "0.10.0", path = "../../../http/crates/model" }
inexor-rgf-reactive = { workspace = true }
inexor-rgf-reactive-api = { workspace = true }
inexor-rgf-behaviour-api = { workspace = true }

[lib]
crate-type = ["lib"]
