[package]
name = "reactive-graph-net-git-model"
description = "Reactive Graph - NET - GIT - Model"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../../../README.md"

[dependencies]
git2 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }

reactive-graph-behaviour-model-api = { workspace = true }
reactive-graph-graph = { workspace = true }
reactive-graph-reactive-model-api = { workspace = true }
reactive-graph-reactive-model-impl = { workspace = true }
reactive-graph-runtime-model = { workspace = true }

reactive-graph-std-base-model = { version = "0.10.0", path = "../../../base/crates/model" }
reactive-graph-sys-file-model = { version = "0.10.0", path = "../../../file/crates/model" }
reactive-graph-net-http-model = { version = "0.10.0", path = "../../../http/crates/model" }

[lib]
crate-type = ["lib"]
